CACommunity-Salesforce/src/objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>OCSP_URL_Verified__c</fullName>
        <label>OCSP URL (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCSP_URL_s__c</fullName>
        <inlineHelpText>OCSP is required for the SSL trust bit to be enabled. Provide the OCSP URL that is in the AIA of your subscriber certificates.</inlineHelpText>
        <label>OCSP URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Issuer_Field__c</fullName>
        <description>Organizational Unit</description>
        <inlineHelpText>Organizational Unit</inlineHelpText>
        <label>OU From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_from_Issuer_Field_Verified__c</fullName>
        <label>OU from Issuer Field (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field_Verified__c</fullName>
        <label>O From Issuer Field (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field__c</fullName>
        <inlineHelpText>The Organization Name and CN in the Issuer must have sufficient information about the CA Organization.</inlineHelpText>
        <label>O From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Verification_Procedure_Verified__c</fullName>
        <label>Org Verification Procedure (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Verification_Procedures__c</fullName>
        <label>Organization Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents_Verified__c</fullName>
        <label>Other Relevant Documents (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents__c</fullName>
        <label>Other Relevant Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation_Verified__c</fullName>
        <label>Policy Documentation (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publ_Discl_Audited_subCAs_Verified__c</fullName>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates (Verified?)</description>
        <label>Publ Discl &amp; Audited subCAs (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicly_Disclosed_and_Audited_subCAs__c</fullName>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates</description>
        <inlineHelpText>Link to Publicly Disclosed and Audited subordinate CA Certificates</inlineHelpText>
        <label>Publicly Disclosed &amp; Audited subCAs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Request Received</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Need Information from CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Verification In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Public Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Public Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Action Items from Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion and EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Included, Pending EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revocation_Tested_Verified__c</fullName>
        <label>Revocation Tested (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revocation_Tested__c</fullName>
        <inlineHelpText>If requesting to enable the Websites (SSL/TLS) trust bit browse to http://certificate.revocationcheck.com/ and enter the Test Website URL. Make sure there are no errors listed in the output.</inlineHelpText>
        <label>Revocation Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL_Verified__c</fullName>
        <label>Root Certificate Download URL (Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL__c</fullName>
        <label>Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name_Existing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this request is to update a root cert that is currently included, then first select the CA Owner, then select the root cert to be updated.</inlineHelpText>
        <label>Included Certificate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Root</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CA_Owner_Name_Existing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases (Included Certificate)</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <label>Root Certificate Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In_Verified__c</fullName>
        <label>Root Stores Included In (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In__c</fullName>
        <label>Root Stores Included In</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint_Verified__c</fullName>
        <label>SHA-1 Fingerprint (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint_Verified__c</fullName>
        <label>SHA-256 Fingerprint (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type_Verified__c</fullName>
        <label>SSL Validation Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type__c</fullName>
        <label>SSL Validation Type</label>
        <picklist>
            <picklistValues>
                <fullName>DV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SSL_Verification_Procedures_Verified__c</fullName>
        <label>SSL Verification Procedures (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSL_Verification_Procedures__c</fullName>
        <label>SSL Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signing_Key_Parameters_Verified__c</fullName>
        <label>Signing Key Parameters (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signing_Key_Parameters__c</fullName>
        <label>Signing Key Parameters</label>
        <picklist>
            <picklistValues>
                <fullName>1024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4096</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-384</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC P-512</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Date__c</fullName>
        <label>Standard Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Dt_Verified__c</fullName>
        <label>Standard Audit Statement Dt (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Statement_Dt__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY. MM.DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999.07.09&quot;</description>
        <formula>IF ( NOT ISBLANK(Standard_Audit_Statement_Date__c),  

TEXT(YEAR(Standard_Audit_Statement_Date__c)) &amp; &quot;.&quot; &amp;

IF (LEN(TEXT(MONTH(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(MONTH(Standard_Audit_Statement_Date__c)),TEXT(MONTH(Standard_Audit_Statement_Date__c))) 
&amp; &quot;.&quot; &amp;

IF (LEN(TEXT(DAY(Standard_Audit_Statement_Date__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Standard_Audit_Statement_Date__c)),TEXT(DAY(Standard_Audit_Statement_Date__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Audit Statement Dt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Type_Verified__c</fullName>
        <label>Standard Audit Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Type__c</fullName>
        <label>Standard Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 101 456</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit_Verified__c</fullName>
        <label>Standard Audit (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Audit__c</fullName>
        <label>Standard Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Cons_on_3rd_party_Iss_Verified__c</fullName>
        <label>Tech Cons on 3rd party Iss (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Constraint_on_3rd_party_Issuer__c</fullName>
        <label>Technical Constraint on 3rd party Issuer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestWebsiteURLSSLorExCert_Verified__c</fullName>
        <label>TestWebsiteURL(SSL)orExCert (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Website_URL_SSL_or_Example_Cert__c</fullName>
        <inlineHelpText>If requesting to enable the Websites (SSL/TLS) trust bit, provide the URL to a website whose SSL cert chains up to this root. If this root does not issue certificates for SSL, then provide example cert(s) issued within the hierarchy rooted at this root.</inlineHelpText>
        <label>Test Website URL (SSL) or Example Cert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trust_Bits_Verified__c</fullName>
        <label>Trust Bits (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trust_Bits__c</fullName>
        <inlineHelpText>Select the trust bits you are requesting to be enabled for this root.</inlineHelpText>
        <label>Trust Bits</label>
        <picklist>
            <picklistValues>
                <fullName>All Trust Bits Turned Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Valid_From_Verified__c</fullName>
        <label>Valid From (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_From__c),

TEXT(YEAR(Valid_From__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_From__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;

IF (LEN(TEXT(DAY(Valid_From__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_From__c)),TEXT(DAY(Valid_From__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Verified__c</fullName>
        <label>Valid To (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_To_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_To__c),

TEXT(YEAR(Valid_To__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_To__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;

IF (LEN(TEXT(DAY(Valid_To__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_To__c)),TEXT(DAY(Valid_To__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid To [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Root Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Request_Status__c</columns>
        <columns>O_From_Issuer_Field__c</columns>
        <columns>OU_From_Issuer_Field__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>